name="TCPSeverRequests"
version="0.0.1"
description="TCP Requests to communicate with local realtime applications"
license="GPL-2.0-only"
authors = [
    "D.Hsu - cgtinker <hello@cgtinker.com>"
]
maintainers = [
    "D.Hsu - cgtinker <hello@cgtinker.com>"
]
repository = "https://github.com/cgtinker/TCPServerRequests"
keywords = ["tcp", "server", "local", "realtime"]

[tool.poetry]
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
