[project]
name="BlendTCPRequests"
version="0.0.1"
description="TCP Requests to communicate with local realtime applications."
authors = [
    { name="Denys Hsu - cgtinker",  email="hello@cgtinker.com"}
]
maintainers = [
    { name="Denys Hsu - cgtinker",  email="hello@cgtinker.com"}
]
keywords = ["tcp", "server", "local", "realtime"]
requires-python = ">=3.0"

[tool.poetry]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project.urls]
"Homepage"= "https://github.com/cgtinker/TCPRequests"
"Bug Tracker"= "https://github.com/cgtinker/TCPRequests/issues"

